@@ -513,6 +513,18 @@ counted from 1. If omitted, the parameter
 defaults to 1.
 
 .TP 
+\fBvoltage_mv\fR \fB(n)\fR 
+Returns CPU #n's voltage in mV. CPUs are
+counted from 1. If omitted, the parameter
+defaults to 1. 
+
+.TP 
+\fBvoltage_v\fR \fB(n)\fR 
+Returns CPU #n's voltage in V. CPUs are
+counted from 1. If omitted, the parameter
+defaults to 1.
+
+.TP 
 \fBfreq_dyn\fR 
 Returns CPU frequency in MHz, but is calculated by counting to clock cycles to complete an instruction. Only available for x86/amd64.
 
